# .dotfiles

./: .bashrc_linux_desktop_deepblue  .gitignore  2020-11-22-computer-setup.md  Dockerfile  Makefile  README.md  ansible-readme.md  docker-compose.yml  dotfiles.yml  hosts  install_software.sh  packages.md  todo.md
.cisupport/: post.sh  pre.sh
ansible/: dotfiles.yml
ansible-play/: hosts  nginx.yml  nginx2.yml  server.yml
asdf/: asdf-config  check-asdf-installed-for-updates.sh  config-asdf  default-gems.symlink  default-npm-packages.symlink  default-python-packages.symlink  install-software-via-asdf.sh  install-via-asdf.sh
bash/: .bashrc_linux_desktop_deepblue  .bashrc_linux_laptop_loop
common-programs/: asdf-install.sh  nvm-install.sh  oh-my-zsh-install.sh
docker/: Dockerfile
docs/: 2020-11-22-computer-setup.md  README-v1.0.md  ansible-readme.md  github-actions-learnings.md  learnings-dynamic-github-releases.md  learnings-github-actions.md  learnings-rust.md  learnings-shellcheck.md  learnings-template.md  mac-apps.md  macos-readme.md  my-tools.md  packages.md  todo.md
files/: .default-cargo-crates  .default-npm-packages  .gitignore  .p10k-2020-04-03.zsh  .p10k.zsh  .vimrc  .zshenv  default-golang-pkgs  gitconfig.j2
git/: gitconfig.local.symlink.example
group_vars/: all.yml  linux.yml  local  local.yml
homebrew/: install-via-brew.sh  readme.md
linux/: config-apt  config-custom-programs  dmrc.symlink  install-custom-programs.sh  install-software-via-apt.sh  install-via-apt.sh  install_via_apt.sh
rdoi/: Cargo.toml
rdoi/src/: main.rs
(+564 files in other folders)
