[package]
name = "rdoi"
version = "0.1.0"
edition = "2021"
authors = ["Johannes Giorgis <johnny.awg@gmail.com"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.11", features = ["derive", "cargo"] }
colored = "2.1.0"

# feature=["cargo"]